@@ -4729,3 +4729,5 @@ Changelog for GXemul:
 		with 0xf as nops.
 		Allow the emulator to start in THUMB mode (lowest pc bit set).
 20180921        Continuing on ARM THUMB disassembly.
+		Beginning to implement very slow THUMB interpretation (not
+		dyntrans). Horrible performance-wise, but better than nothing.
